--- a/loguin/index.html
+++ b/loguin/index.html
@@ -3,23 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <title>Iniciar Sesión</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Iniciar Sesión</h1>
-        <form id="loginForm">
-            <label for="username">Usuario</label>
-            <input type="text" id="username" name="username" required>
-            <br>
-            <label for="password">Contraseña</label>
-            <input type="password" id="password" name="password" required>
-            <br>
-            <button type="submit">Iniciar Sesión</button>
-        </form>
-        <p id="error" class="error"></p>
+    <div class="general-container">
+        <div class="sidebar">
+            <a class="headerlogo" href="">
+                <img src="" alt="">
+            </a>
+            <video src="https://cdn.dribbble.com/uploads/48226/original/b8bd4e4273cceae2889d9d259b04f732.mp4?1689028949" autoplay loop muted></video>
+        </div>
+        <div class="container-rigth">
+            <div class="container">
+                <h1>Sign in to Dribbble    </h1>
+                <form id="loginForm">
+                    <label for="username">Username or Email</label>
+                    <input type="text" id="username" name="username" required>
+                    <br>
+                    <label for="password">Passsword</label>
+                    <input type="password" id="password" name="password" required>
+                    <br>
+                    <button type="submit">Sign In</button>
+                </form>
+                <p id="error" class="error"></p>
+            </div>
+            <script src="script.js"></script>
+        </div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
