--- a/webdark/index.html
+++ b/webdark/index.html
@@ -4,18 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Modo Dark</title>
+    <title>Pricing Plans</title>
 </head>
 <body>
     <div class="container">
-        <h1>Cambio de Modo</h1>
-        <form id="modeForm">
-            <label for="modeSelect">Selecciona un modo:</label>
-            <select id="modeSelect" name="modeSelect">
-                <option value="light">Modo Claro</option>
-                <option value="dark">Modo Oscuro</option>
-            </select>
-        </form>
+        <h1>Pricing Plans</h1>
+        <label class="switch">
+            <input type="checkbox" id="themeToggle">
+            <span class="slider round"></span>
+        </label>
+        <div class="plans">
+            <div class="plan" id="plan1">
+                <h2>Plan Básico</h2>
+                <p class="price">$10/mes</p>
+                <ul>
+                    <li>Función 1</li>
+                    <li>Función 2</li>
+                    <li>Función 3</li>
+                </ul>
+            </div>
+            <div class="plan" id="plan2">
+                <h2>Plan Estándar</h2>
+                <p class="price">$25/mes</p>
+                <ul>
+                    <li>Función 1</li>
+                    <li>Función 2</li>
+                    <li>Función 3</li>
+                </ul>
+            </div>
+            <div class="plan" id="plan3">
+                <h2>Plan Premium</h2>
+                <p class="price">$50/mes</p>
+                <ul>
+                    <li>Función 1</li>
+                    <li>Función 2</li>
+                    <li>Función 3</li>
+                </ul>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
