--- a/webdark/index.html
+++ b/webdark/index.html
@@ -3,42 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300&family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Pricing Plans</title>
 </head>
 <body>
     <div class="container">
         <h1>Pricing Plans</h1>
-        <label class="switch">
-            <input type="checkbox" id="themeToggle">
-            <span class="slider round"></span>
-        </label>
+        <div class="switch-container">
+            Modo claro
+            <label class="switch">
+                <input type="checkbox" id="themeToggle">
+                <span class="slider round"></span>
+            </label>
+            Modo oscuro
+        </div>
         <div class="plans">
             <div class="plan" id="plan1">
-                <h2>Plan Básico</h2>
+                <h2>Free</h2>
                 <p class="price">$10/mes</p>
+                <p>Basic access to interactive design learning and skill-building tools.</p>
+                <a href="" class="button-plan">
+                    Get started
+                </a>
                 <ul>
-                    <li>Función 1</li>
-                    <li>Función 2</li>
-                    <li>Función 3</li>
+                    <li>Every first course level for free</li>
+                    <li>Limited skill assessments</li>
+                    <li>Limited design challenges</li>
+                    <li>Arcade design games</li>
                 </ul>
             </div>
             <div class="plan" id="plan2">
-                <h2>Plan Estándar</h2>
+                <h2>Pro</h2>
                 <p class="price">$25/mes</p>
+                <p>Unlimited access to all learning content and professional UX tools.</p>
+                <a href="" class="button-plan">
+                    Get started
+                </a>
                 <ul>
-                    <li>Función 1</li>
-                    <li>Función 2</li>
-                    <li>Función 3</li>
+                    <li>Every first course level for free</li>
+                    <li>Limited skill assessments</li>
+                    <li>Limited design challenges</li>
+                    <li>Arcade design games</li>
                 </ul>
             </div>
             <div class="plan" id="plan3">
-                <h2>Plan Premium</h2>
-                <p class="price">$50/mes</p>
+                <h2>Pro</h2>
+                <p class="price">$25/mes</p>
+                <p>Unlimited access to all learning content and professional UX tools.</p>
+                <a href="" class="button-plan">
+                    Get started
+                </a>
                 <ul>
-                    <li>Función 1</li>
-                    <li>Función 2</li>
-                    <li>Función 3</li>
+                    <li>Every first course level for free</li>
+                    <li>Limited skill assessments</li>
+                    <li>Limited design challenges</li>
+                    <li>Arcade design games</li>
                 </ul>
             </div>
         </div>
