se suben ajustes de texto para la webdark

--- a/webdark/index.html
+++ b/webdark/index.html
@@ -13,12 +13,12 @@
     <div class="container">
         <h1>Pricing Plans</h1>
         <div class="switch-container">
-            Modo claro
+            Ligth mode
             <label class="switch">
                 <input type="checkbox" id="themeToggle">
                 <span class="slider round"></span>
             </label>
-            Modo oscuro
+            Dark mode
         </div>
         <div class="plans">
             <div class="plan" id="plan1">
